# Employee

./: .clang-format  .gitignore  CMakeLists.txt  employee-data.txt  employee.cpp  employee.h  main.cpp
Bad/: Calendar.cpp  Calendar.h  Employee.cpp  Employee.h  EmployeeTest.cpp  Location.h  Main.cpp
BadRefactored1/: Calendar.h  CalendarFileReader.h  CalendarReader.cpp  CalendarReader.h  Employee.cpp  Employee.h  EmployeeDataFileReader.cpp  Location.cpp  Location.h  Main.cpp  Name.h  NameFileReader.cpp  NameFileReader.h  NameReader.h  Time.cpp  Time.h
BadRefactored2/: AppointmentProvider.h  Calendar.cpp  Calendar.h  Employee.cpp  EmployeeFactory.cpp  EmployeeFactory.h  EmployeeTest.cpp  FileAppointmentProvider.h  Location.h  Main.cpp  Name.cpp  Time.h
Overkill/: DateGenerator.h  DefaultDateGenerator.h  DefaultPaymentCalculator.cpp  DefaultPaymentCalculator.h  Employee.cpp  Employee.h  EmployeeTest.cpp  Main.cpp  Name.cpp  Name.h  PaymentCalculator.h  Stream.cpp  Stream.h
Overkill/Core/: DefaultDateGenerator.cpp  DefaultDateGenerator.h  DefaultPaymentCalculator.cpp  DefaultPaymentCalculator.h  DefaultSalaryComputationStrategy.cpp  DefaultSalaryComputationStrategy.h  FixedDateGenerator.cpp  FixedDateGenerator.h  Utilities.cpp  Utilities.h
Overkill/Entities/: DateGenerator.cpp  DateGenerator.h  Employee.cpp  Employee.h  Name.cpp  Name.h  PaymentCalculator.h  SalaryComputationStrategy.h
Overkill/InputOutput/: EmployeeFileReader.cpp  EmployeeFileReader.h
Overkill/Tests/Core/: DefaultPaymentCalculatorTest.cpp  FixedDateGeneratorTest.cpp
Overkill/Tests/Entities/: DateGeneratorTest.cpp  EmployeeTest.cpp  NameTest.cpp
Overkill/Tests/UseCases/: AugmentedEmployeeListPrinterTest.cpp  DefaultEmployeeListPrinterTest.cpp  EmployeeFactoryTest.cpp  EmployeeListFactoryTest.cpp
Overkill/UseCases/: AugmentedEmployeeListPrinter.cpp  AugmentedEmployeeListPrinter.h  DefaultEmployeeListPrinter.cpp  DefaultEmployeeListPrinter.h  EmployeeFactory.cpp  EmployeeFactory.h  EmployeeListFactory.h  EmployeeListPrinter.cpp  EmployeeListPrinter.h
